fixed stats placeholder image alignment #104

--- a/codalab/apps/web/static/site/css/Main.css
+++ b/codalab/apps/web/static/site/css/Main.css
@@ -2738,4 +2738,7 @@ ul.leftNavigation li.active a{
 .glossary-page-container h4.firstrow {
     margin-top: -60px;
 }
+.stats_placeholder {
+    padding-top: 39px;
+}
 
